[tool.poetry]
name = "joshk"
version = "0.1.3"
description = "A package of Josh K's things"
authors = ["Josh K <59419126+this-josh@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
